--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,16 +2,16 @@
     <string name="app_name">BBC News</string>
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
-    <string name="nav_header_title">Mark Anderson Hans Jacob</string>
-    <string name="nav_header_subtitle">Mark.Jacob@BBC.com</string>
+    <string name="nav_header_title">Nimisha Sharma</string>
+    <string name="nav_header_subtitle">nimisha.sharma@gmail.com</string>
     <string name="nav_header_desc">Navigation header</string>
     <string name="action_settings">Settings</string>
     <string name="latitude">Latitude</string>
     <string name="longitude">Longitude</string>
     <string name="submit">Submit</string>
     <string name="menu_home">Home</string>
-    <string name="menu_gallery">Gallery</string>
-    <string name="menu_slideshow">Slideshow</string>
+    <string name="menu_gallery">Notifications</string>
+    <string name="menu_slideshow">Settings</string>
     <string name="Profile">Profile</string>
     <string name="live_news">LIVE news</string>
     <string name="dashboard">Dashboard</string>
